# src/main/java/com/chubb/claimsmanagement/claim/dto/CreateClaimRequest.java
@@ -4,10 +4,9 @@ import com.chubb.claimsmanagement.common.enums.ClaimType;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 
-import java.util.UUID;
 
 public record CreateClaimRequest(
-        @NotNull UUID claimantId,
+        @NotBlank String claimantMemberNumber,
         @NotNull ClaimType claimType,
         @NotBlank String description
 ) {
