# src/main/java/com/chubb/claimsmanagement/claimant/dto/CreateClaimantRequest.java
@@ -4,6 +4,7 @@ import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
 
 public record CreateClaimantRequest(
+        @NotBlank String claimantMemberNumber,
         @NotBlank String firstName,
         @NotBlank String lastName,
         @NotBlank @Email String email,
